--- a/culture.html
+++ b/culture.html
@@ -76,17 +76,17 @@
     <div class="container">
         <div class="container-fluid">
             <div class="row text-center">
-                <div class="col-sm-4 p-5">
+                <div class="col-md-4 p-5">
                     <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/placeholder.png');"></div>
                      <h2 class="culture-title pt-3">EXCELLENCE</h2>
                     <h4 class="pl-4 text-center culture-content text-justify">We are committed to technical excellence in our work. We make sure that solutions we deliver are well tested, properly architected and highly performant. We consider every piece of software that we develop to be works of art which speak for themselves</h4>
                 </div>
-                <div class="col-sm-4 p-5">
+                <div class="col-md-4 p-5">
                     <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/placeholder.png');"></div>
                      <h2 class="culture-title pt-3">INTEGRITY</h2>
                     <h4 class="pl-4 text-center culture-content text-justify">We're completely transparent about our skills and workflow with our clients. This gives our customers a clear window into how our team collaborates with them to deliver their projects</h4>
                 </div>
-                <div class="col-sm-4 p-5">
+                <div class="col-md-4 p-5">
                     <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/placeholder.png');"></div>
                      <h2 class="culture-title pt-3">EXCELLENCE</h2>
                     <h4 class="pl-4 text-center culture-content text-justify">We understand that our clients depend on us for timely delivery of high quality solutions and take this to heart. We make sure that all our clients can consider us to be an extension of their internal teams</h4>
@@ -100,13 +100,13 @@
     <div class="container-fluid section-bg">
         <div class="container justify-content-center section-bg">
             <div class="row pl-5">
-                <div class="col-6 pt-5 my-5 py-5 float-right">
+                <div class="col-md-6 pt-5 my-5 py-5 float-right">
                     <h1 class="how-we-work text-left">HIRING PROCESS</h1>
                     <p class="how-we-description">Our hiring process is tailored to maintaining our core values. Our people define us and we're very careful about whom we hire.</p>
                     <p class="how-we-description pt-3">We ensure that the engineers who work with you are ambassadors of our values. All our engineers are hired after a carefully structured filtering and training program. This helps us to maintain the culture and core values of the company.</p>
 
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <img src="./img/culture-side-bg.png">
                 </div>
             </div>
@@ -145,7 +145,7 @@
         <!-- Cards -->
         <div class="container">
             <div class="row pt-5">
-                <div class="col-6 d-flex justify-content-between">
+                <div class="col-md-6 d-flex justify-content-between">
                     <div class="card">
                       <div class="card-body">
                         <h5 class="card-title open-source">Command line invoice and timesheet management</h5>
@@ -154,7 +154,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col-6 d-flex justify-content-between">
+                <div class="col-md-6 d-flex justify-content-between">
                     <div class="card">
                       <div class="card-body">
                         <h5 class="card-title open-source">Low level port of the python psutil library.</h5>
@@ -186,13 +186,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row pt-5">
-                <div class="col-2">
+                <div class="col-md-2">
                     <a href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <!-- for spacing -->
                 </div>
                 <div class="col">
@@ -239,10 +239,10 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <span class="text-muted ml-2">© 2019 HAMON. All rights reserved</span>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <!-- for spacing -->
                 </div>
                 <div class="col social">
