--- a/team.html
+++ b/team.html
@@ -105,32 +105,32 @@
                     </div>
                 </div>
                 <div class="row text-center">
-                    <div class="col-sm-2 p-5">
+                    <div class="col-md-2 p-5">
                         <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/staff/suroor.jpg');"></div>
                          <h2 class="employee-name pt-3">Suroor</h2>
                         <h5 class="employee-designation">Sr. Software Engineer</h5> 
                     </div>
-                    <div class="col-sm-2 p-5">
+                    <div class="col-md-2 p-5">
                         <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/staff/irfan.jpg');"></div>
                          <h2 class="employee-name pt-3">Irfan</h2>
                         <h5 class="employee-designation">Sr. Software Engineer</h5> 
                     </div>
-                    <div class="col-sm-2 p-5">
+                    <div class="col-md-2 p-5">
                         <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/staff/abhu.jpg');"></div>
-                         <h2 class="employee-name pt-3">Aboobaker</h2>
+                         <h2 class="employee-name pt-3">Aboobacker</h2>
                         <h5 class="employee-designation">Software Engineer</h5> 
                     </div>
-                    <div class="col-sm-2 p-5">
+                    <div class="col-md-2 p-5">
                         <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/staff/ligin.jpg');"></div>
                          <h2 class="employee-name pt-3">Ligin</h2>
                         <h5 class="employee-designation">Software Engineer</h5> 
                     </div>
-                    <div class="col-sm-2 p-5">
+                    <div class="col-md-2 p-5">
                         <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/staff/bala.jpg');"></div>
                          <h2 class="employee-name pt-3">Bala</h2>
                         <h5 class="employee-designation">Software Engineer</h5> 
                     </div>
-                    <div class="col-sm-2 p-5">
+                    <div class="col-md-2 p-5">
                         <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/staff/rafee.jpg');"></div>
                          <h2 class="employee-name pt-3">Rafi</h2>
                         <h5 class="employee-designation">Administrative Executive</h5> 
@@ -143,13 +143,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row pt-5">
-                <div class="col-2">
+                <div class="col-md-2">
                     <a href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <!-- for spacing -->
                 </div>
                 <div class="col">
@@ -196,10 +196,10 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <span class="text-muted ml-2">© 2019 HAMON. All rights reserved</span>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <!-- for spacing -->
                 </div>
                 <div class="col social">
