--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
     <!-- Work Card -->
     <div class="container">
         <div class="row pt-5">
-            <div class="col-6 pb-5">
+            <div class="col-md-6 pb-5">
                 <div class="card w-100">
                     <img class="card-img-top pt-3" src="./img/work/qq.svg" width="50%" height="50%" alt="Card image cap">
                     <div class="card-body">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="col-6 pb-5">
+            <div class="col-md-6 pb-5">
                 <div class="card w-100">
                     <img class="card-img-top pt-3" src="./img/work/vyoma.svg" width="50%" height="50%" alt="Card image cap">
                     <div class="card-body">
@@ -92,7 +92,7 @@
                 </div>
             </div>
 
-            <div class="col-6 pb-5">
+            <div class="col-md-6 pb-5">
                 <div class="card w-100">
                     <img class="card-img-top pt-3" src="./img/work/qq.svg" alt="Card image cap">
                     <div class="card-body">
@@ -103,7 +103,7 @@
                 </div>
             </div>
 
-            <div class="col-6 pb-5">
+            <div class="col-md-6 pb-5">
                 <div class="card w-100">
                     <img class="card-img-top pt-3" src="./img/work/vyoma.svg" alt="Card image cap">
                     <div class="card-body">
@@ -121,13 +121,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row pt-5">
-                <div class="col-2">
+                <div class="col-md-2">
                     <a href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <!-- for spacing -->
                 </div>
                 <div class="col">
@@ -174,10 +174,10 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <span class="text-muted ml-2">© 2019 HAMON. All rights reserved</span>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <!-- for spacing -->
                 </div>
                 <div class="col social">
