--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     <div class="container">
         <div class="row pt-5">
             <!-- Fill-in card -->
-            <div class="col-6">
+            <div class="col-md-6">
                 <div class="card">
                     <!-- Title -->
                     <div class="row">
@@ -90,7 +90,7 @@
                                             <input type="text" name="name" class="form-control form-control-lg" placeholder="Name">
                                         </div>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-md-6">
                                         <div class="form-group">
                                             <input type="tel" name="tel" class="form-control form-control-lg" placeholder="Phone Number">       
                                         </div>     
@@ -132,14 +132,14 @@
                 </div>
             </div>
             
-            <div class="col-6">
+            <div class="col-md-6">
                 <!-- contact -->
                 <div class="container-fluid mx-3">
                    <div class="row ">
                        <div class="card w-100">
                            <!-- email -->
                            <div class="row">
-                               <div class="col-2">
+                               <div class="col-md-2">
                                    <img src="./img/contact/mail.png">    
                                </div>
                                <div class="col contact-all pt-3">
@@ -148,7 +148,7 @@
                            </div>
                            <!-- mobile -->
                            <div class="row">
-                               <div class="col-2">
+                               <div class="col-md-2">
                                    <img src="./img/contact/call.png">    
                                </div>
                                <div class="col contact-all pt-3">
@@ -157,7 +157,7 @@
                            </div>
                            <!-- twitter -->
                            <div class="row">
-                               <div class="col-2">
+                               <div class="col-md-2">
                                    <img src="./img/contact/twitter.png">    
                                </div>
                                <div class="col contact-all pt-3">
@@ -186,13 +186,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row pt-5">
-                <div class="col-2">
+                <div class="col-md-2">
                     <a href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <!-- for spacing -->
                 </div>
                 <div class="col">
@@ -239,10 +239,10 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <span class="text-muted ml-2">© 2019 HAMON. All rights reserved</span>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <!-- for spacing -->
                 </div>
                 <div class="col social">
