--- a/services.html
+++ b/services.html
@@ -87,10 +87,10 @@
                     <div class="col">
                         <!-- first row -->
                         <div class="row ">
-                            <div class="col-lg-6 col-sm-12 d-flex justify-content-left">
+                            <div class="col-md-6 col-md-12 d-flex justify-content-left">
                                 <img src="./img/service/iconAi.svg" alt="" class="mr-2">
                                 <div class="row">
-                                    <div class="col-12">
+                                    <div class="col-md-12">
                                         <h1>AI/ML</h1>
                                         <p class="text-justify">
                                             Data analysis and pre-processing Standard machine learning and deep learning Automation and data pipelines Deploying ML solutions
@@ -98,7 +98,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-sm-12 d-flex justify-content-right">
+                            <div class="col-md-6 col-md-12 d-flex justify-content-right">
                                 <img src="./img/service/cloud.svg" alt="" class=" mr-2">
                                 <div class="row">
                                     <div class="col">
@@ -112,10 +112,10 @@
                         </div>
                         <!-- Second row -->
                         <div class="row">
-                            <div class="col-lg-6 col-sm-12 d-flex justify-content-left">
+                            <div class="col-md-6 col-md-12 d-flex justify-content-left">
                                 <img src="./img/service/automation.svg" alt="" class=" mr-2">
                                 <div class="row">
-                                    <div class="col-12">
+                                    <div class="col-md-12">
                                         <h1>Automation</h1>
                                         <p class="text-justify">
                                             Devops Test automation and reporting IoT device management Custom deployment solutions
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-sm-12 d-flex justify-content-right">
+                            <div class="col-md-6 col-md-12 d-flex justify-content-right">
                                 <img src="./img/service/advisory.svg" alt="" class=" mr-2">
                                 <div class="row">
                                     <div class="col">
@@ -145,14 +145,14 @@
     <div class="container-fluid section-bg">
         <div class="container justify-content-center section-bg">
             <div class="row pl-5">
-                <div class="col-6 pt-5 my-5 py-5 float-right">
+                <div class="col-md-6 pt-5 my-5 py-5 float-right">
                     <h1 class="how-we-work text-left">HOW WE WORK</h1>
                     <p class="how-we-description text-justify">We start our projects with an initial inception meeting. We use this to understand the scope of the project and to estimate effort, resources and timelines. After this, we work in weekly iterations with constant communication so that our
                         clients are aware of the project status at all times. A regular meeting with the client at the beginning of each iteration allows us to course correct if necessary and keep the effort focussed on delivering maximum value.</p>
                     <p class="how-we-description text-justify pt-3">We have refined our processes over our projects and have delivered maximum value for our clients.</p>
 
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <img src="./img/service-side-bg.png">
                 </div>
             </div>
@@ -207,13 +207,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row pt-5">
-                <div class="col-2">
+                <div class="col-md-2">
                     <a href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <!-- for spacing -->
                 </div>
                 <div class="col">
@@ -260,10 +260,10 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <span class="text-muted ml-2">© 2019 HAMON. All rights reserved</span>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <!-- for spacing -->
                 </div>
                 <div class="col social">
