Modified & add new case-studies

--- a/case_study_id.html
+++ b/case_study_id.html
@@ -53,24 +53,25 @@
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
             <div class="col-8 py-5 work-pointer description text-justify">
-                  <h1 class="case-study-title">Case Study: <span class="company-title">Eunimart</span></h1>
+                  <h1 class="case-study-title">Case Study: <span class="company-title">Idea Device </span>(acquired by Nutanix)</h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
                       <img class="pb-5" src="./img/case_study/qq.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
-                          <li>Breakthrough AI-powered cross border e-commerce platform Integration with over 15 established online marketplaces such as Amazon, ebay SMB customers across the globe 70+ employees</li>
+                          <li>Idea Device was a Runbook automation (RBA) company  funded by Sequoia capital and had 40+ employees. The  company was acquired by Nutanix and the product is  sold as Nutanix calm</li>
                       </ul>
                       <h3 class="heading">Problem</h3>
                       <ul>
-                          <li>Build the AI engines, data pipelines and infrastructure for the business intelligence subsystem</li>
+                          <li>The company needed a way to distribute complex multi-service application to customers running different Operating systems</li>
+                          <li>The package had to be easily installable and maintainable by the end user.This was before modern container technologies became mainstream</li>   
                       </ul>
                       <h3 class="heading">Solution</h3>
-                      <p>Hamon designed the Al engine powering Eunimart's  path breaking technology platform. Obtained and analyzed  over two years of historical sales data of customers to create  models for predicting sales, suggesting price etc. Developed  retrainable subsystems with automated data pipelines that  currently power the platform</p>
+                      <p>Designed and developed a packaging system using home-grown technologies which allowed end users  to install and manage the application through a single script Packaging tool ran unmodiﬁed for over six years</p>
                       <h3 class="heading">Result</h3>
-                      <p>Eunimart was able to release MVP, acquire external investors  and begin customer acquisition. First version of the general  availability product released and currently working on Phase 2</p>
+                      <p>Fixed the distribution and upgrade problem for the initial product Was preferred to docker by enterprise customers for easiness and transparency even after 5 years of use</p>
                       <h3 class="heading">Technologies</h3>
-                      <p>Natural Language Toolkit (Python NLTK), Tensorflow,  Scikit-Learn, AWS Sagemaker, Scrapy. Selenium</p>
+                      <p>Python, Make, Debian toolchain, chroot, shell, Linux</p>
                   </div>    
             </div>
             <div class="col py-5 px-5 side-nav">
@@ -79,7 +80,7 @@
                     <ul class="px-5 pb-5">
                         <li><a href="./case_study_qq.html">QuackQuack</a></li>
                         <hr>
-                        <li><a href="#" class="current">Eunimart</a></li>
+                        <li><a href="./case_study_euni.html">Eunimart</a></li>
                         <hr>
                         <li><a href="./case_study_vyoma.html">Vyoma Media</a></li>
                         <hr>
@@ -89,7 +90,7 @@
                         <hr>
                         <li><a href="./case_study_tandberg.html">Tandberg (acquired by Cisco)</a></li>
                         <hr>
-                        <li><a href="./case_study_id.html">Idea Device (acquired by Nutanix)</a></li>
+                        <li><a href="#" class="current">Idea Device (acquired by Nutanix)</a></li>
                         <hr>
                         <li><a href="./case_study_renesas.html">Renesas Electronics</a></li>
                     </ul>
