--- a/case_study_paisool.html
+++ b/case_study_paisool.html
@@ -53,24 +53,26 @@
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
             <div class="col-8 py-5 work-pointer description text-justify">
-                  <h1 class="case-study-title">Case Study: <span class="company-title">Eunimart</span></h1>
+                  <h1 class="case-study-title">Case Study: <span class="company-title">Paisool.com</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
                       <img class="pb-5" src="./img/case_study/qq.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
-                          <li>Breakthrough AI-powered cross border e-commerce platform Integration with over 15 established online marketplaces such as Amazon, ebay SMB customers across the globe 70+ employees</li>
+                          <li>Startup with ~15 employees and a disruptor in the FMCG retail segment</li> 
+                          <li>Builds In house intelligent PoS devices that maintain consumer information and facilitate global access to user proﬁles</li>
                       </ul>
                       <h3 class="heading">Problem</h3>
                       <ul>
-                          <li>Build the AI engines, data pipelines and infrastructure for the business intelligence subsystem</li>
+                          <li>For this startup that connects shoppers with a retail store, it needed a way to connect individual PoS devices in a peer to peer fashion without a central cloud in between</li>
+                          <li> The system is expected to be able to work with poor and slow connections and handle issues like ﬁrewalls etc</li>
                       </ul>
                       <h3 class="heading">Solution</h3>
-                      <p>Hamon designed the Al engine powering Eunimart's  path breaking technology platform. Obtained and analyzed  over two years of historical sales data of customers to create  models for predicting sales, suggesting price etc. Developed  retrainable subsystems with automated data pipelines that  currently power the platform</p>
+                      <p>We developed a library for the webRTC data channel protocol and wrapped it in python for easy use. This was deployed on all the machines and scaled up to handle the number of connections they needed</p>
                       <h3 class="heading">Result</h3>
-                      <p>Eunimart was able to release MVP, acquire external investors  and begin customer acquisition. First version of the general  availability product released and currently working on Phase 2</p>
+                      <p>Our solution was able to handle up-to 50  connections per node simultaneously sending and  receiving trafﬁc. The packaging enabled easy  software updates without disruption</p>
                       <h3 class="heading">Technologies</h3>
-                      <p>Natural Language Toolkit (Python NLTK), Tensorflow,  Scikit-Learn, AWS Sagemaker, Scrapy. Selenium</p>
+                      <p>Python (FFI), C/C++, Flask, REST</p>
                   </div>    
             </div>
             <div class="col py-5 px-5 side-nav">
@@ -79,11 +81,11 @@
                     <ul class="px-5 pb-5">
                         <li><a href="./case_study_qq.html">QuackQuack</a></li>
                         <hr>
-                        <li><a href="#" class="current">Eunimart</a></li>
+                        <li><a href="./case_study_euni.html">Eunimart</a></li>
                         <hr>
                         <li><a href="./case_study_vyoma.html">Vyoma Media</a></li>
                         <hr>
-                        <li><a href="./case_study_paisool.html">Paisool.com</a></li>
+                        <li><a href="#" class="current">Paisool.com</a></li>
                         <hr>
                         <li><a href="./case_study_miab.html">Museum In a Box</a></li>
                         <hr>
