--- a/case_study_qq.html
+++ b/case_study_qq.html
@@ -52,7 +52,7 @@
     <!-- <main role="main"> -->
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
-            <div class="col-8 py-5 work-pointer description text-justify">
+            <div class="col-md-8 py-5 work-pointer description text-justify">
                   <h1 class="case-study-title">Case Study: <span class="company-title">QuackQuack</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
@@ -83,19 +83,19 @@
                     <ul class="px-5 pb-5">
                         <li><a href="#" class="current">QuackQuack</a></li>
                         <hr>
-                        <li><a href="./case_study_euni.html">Eunimart</a></li>
+                        <li><a href="./case_study_euni.html" >Eunimart</a></li>
                         <hr>
-                        <li><a href="#">Vyoma Media</a></li>
+                        <li><a href="./case_study_vyoma.html">Vyoma Media</a></li>
                         <hr>
-                        <li><a href="#">Paisool.com</a></li>
+                        <li><a href="./case_study_paisool.html">Paisool.com</a></li>
                         <hr>
-                        <li><a href="#">Museum In a Box</a></li>
+                        <li><a href="./case_study_miab.html">Museum In a Box</a></li>
                         <hr>
-                        <li><a href="#">Tandberg (acquired by Cisco)</a></li>
+                        <li><a href="./case_study_tandberg.html">Tandberg (acquired by Cisco)</a></li>
                         <hr>
-                        <li><a href="#">Idea Device (acquired by Nutanix)</a></li>
+                        <li><a href="./case_study_id.html">Idea Device (acquired by Nutanix)</a></li>
                         <hr>
-                        <li><a href="#">Renesas Electronics</a></li>
+                        <li><a href="./case_study_renesas.html">Renesas Electronics</a></li>
                     </ul>
 
                 </div>
@@ -108,13 +108,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row pt-5">
-                <div class="col-2">
+                <div class="col-md-2">
                     <a href="./index.html">
                         <img src="./img/logo.png" alt="logo">
                     </a>
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <!-- for spacing -->
                 </div>
                 <div class="col">
@@ -161,10 +161,10 @@
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <span class="text-muted ml-2">© 2019 HAMON. All rights reserved</span>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <!-- for spacing -->
                 </div>
                 <div class="col social">
