--- a/case_study_tandberg.html
+++ b/case_study_tandberg.html
@@ -53,24 +53,25 @@
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
             <div class="col-8 py-5 work-pointer description text-justify">
-                  <h1 class="case-study-title">Case Study: <span class="company-title">Eunimart</span></h1>
+                  <h1 class="case-study-title">Case Study: <span class="company-title">Tandberg </span>(acquired by Cisco)</h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
                       <img class="pb-5" src="./img/case_study/qq.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
-                          <li>Breakthrough AI-powered cross border e-commerce platform Integration with over 15 established online marketplaces such as Amazon, ebay SMB customers across the globe 70+ employees</li>
+                          <li>Tandberg was a pioneer and world-leader in enterprise telepresence. Had ~$800M in revenues and 1450 employees when Cisco systems acquired the company</li>
                       </ul>
                       <h3 class="heading">Problem</h3>
                       <ul>
-                          <li>Build the AI engines, data pipelines and infrastructure for the business intelligence subsystem</li>
+                          <li>For industry ﬁrst HD USB (Precision USB HD - TTC8-03)  webcam, the company needed a way to automatically test software deployed on the camera regularly to reduce regression defects and maintain software quality</li>
+                          <li> Existing method relied on manual testing which made the test coverage inadequate and expensive</li>
                       </ul>
                       <h3 class="heading">Solution</h3>
-                      <p>Hamon designed the Al engine powering Eunimart's  path breaking technology platform. Obtained and analyzed  over two years of historical sales data of customers to create  models for predicting sales, suggesting price etc. Developed  retrainable subsystems with automated data pipelines that  currently power the platform</p>
+                      <p>Architected the software agent running on the camera which allowed it to be scripted from the host. Also, the test lab equipment was automated</p>
                       <h3 class="heading">Result</h3>
-                      <p>Eunimart was able to release MVP, acquire external investors  and begin customer acquisition. First version of the general  availability product released and currently working on Phase 2</p>
+                      <p>Allowed the tests to be automatically run more frequently without manual supervision Caught most defects before public release thereby increasing quality of released product</p>
                       <h3 class="heading">Technologies</h3>
-                      <p>Natural Language Toolkit (Python NLTK), Tensorflow,  Scikit-Learn, AWS Sagemaker, Scrapy. Selenium</p>
+                      <p>Linux Kernel, C, FFI, REST APIs, RPC</p>
                   </div>    
             </div>
             <div class="col py-5 px-5 side-nav">
@@ -79,7 +80,7 @@
                     <ul class="px-5 pb-5">
                         <li><a href="./case_study_qq.html">QuackQuack</a></li>
                         <hr>
-                        <li><a href="#" class="current">Eunimart</a></li>
+                        <li><a href="./case_study_euni.html">Eunimart</a></li>
                         <hr>
                         <li><a href="./case_study_vyoma.html">Vyoma Media</a></li>
                         <hr>
@@ -87,7 +88,7 @@
                         <hr>
                         <li><a href="./case_study_miab.html">Museum In a Box</a></li>
                         <hr>
-                        <li><a href="./case_study_tandberg.html">Tandberg (acquired by Cisco)</a></li>
+                        <li><a href="#" class="current">Tandberg (acquired by Cisco)</a></li>
                         <hr>
                         <li><a href="./case_study_id.html">Idea Device (acquired by Nutanix)</a></li>
                         <hr>
