--- a/case_study_miab.html
+++ b/case_study_miab.html
@@ -53,24 +53,25 @@
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
             <div class="col-8 py-5 work-pointer description text-justify">
-                  <h1 class="case-study-title">Case Study: <span class="company-title">Eunimart</span></h1>
+                  <h1 class="case-study-title">Case Study: <span class="company-title">Museum In a Box</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
                       <img class="pb-5" src="./img/case_study/qq.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
-                          <li>Breakthrough AI-powered cross border e-commerce platform Integration with over 15 established online marketplaces such as Amazon, ebay SMB customers across the globe 70+ employees</li>
+                          <li>Edtech startup based out of London, UK founded  by George Oates (Chief designer of Flickr.com,  Director of openlibrary.org)</li>
+                          <li>Creates low cost mobile museums with 3D-printed  items and software curators</li>
                       </ul>
                       <h3 class="heading">Problem</h3>
-                      <ul>
-                          <li>Build the AI engines, data pipelines and infrastructure for the business intelligence subsystem</li>
-                      </ul>
+                      
+                          <p>MI Box needed backend software for their pilot program which allows educational institutions to create their own mobile museums and for existing users to share their collections</p>
+                      
                       <h3 class="heading">Solution</h3>
-                      <p>Hamon designed the Al engine powering Eunimart's  path breaking technology platform. Obtained and analyzed  over two years of historical sales data of customers to create  models for predicting sales, suggesting price etc. Developed  retrainable subsystems with automated data pipelines that  currently power the platform</p>
+                      <p>Architected and built the backend server which  communicates with all connected museum boxes  Functionality for museum owners to share their  collections</p>
                       <h3 class="heading">Result</h3>
-                      <p>Eunimart was able to release MVP, acquire external investors  and begin customer acquisition. First version of the general  availability product released and currently working on Phase 2</p>
+                      <p>Pilot program started on time and new customers onboarded as per plan without surprises. Continuing support and enhancements</p>
                       <h3 class="heading">Technologies</h3>
-                      <p>Natural Language Toolkit (Python NLTK), Tensorflow,  Scikit-Learn, AWS Sagemaker, Scrapy. Selenium</p>
+                      <p>Django</p>
                   </div>    
             </div>
             <div class="col py-5 px-5 side-nav">
@@ -79,13 +80,13 @@
                     <ul class="px-5 pb-5">
                         <li><a href="./case_study_qq.html">QuackQuack</a></li>
                         <hr>
-                        <li><a href="#" class="current">Eunimart</a></li>
+                        <li><a href="./case_study_euni.html">Eunimart</a></li>
                         <hr>
                         <li><a href="./case_study_vyoma.html">Vyoma Media</a></li>
                         <hr>
                         <li><a href="./case_study_paisool.html">Paisool.com</a></li>
                         <hr>
-                        <li><a href="./case_study_miab.html">Museum In a Box</a></li>
+                        <li><a href="#" class="current">Museum In a Box</a></li>
                         <hr>
                         <li><a href="./case_study_tandberg.html">Tandberg (acquired by Cisco)</a></li>
                         <hr>
