--- a/case_study_renesas.html
+++ b/case_study_renesas.html
@@ -53,24 +53,24 @@
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
             <div class="col-8 py-5 work-pointer description text-justify">
-                  <h1 class="case-study-title">Case Study: <span class="company-title">Eunimart</span></h1>
+                  <h1 class="case-study-title">Case Study: <span class="company-title">Renesas Electronics</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
                       <img class="pb-5" src="./img/case_study/qq.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
-                          <li>Breakthrough AI-powered cross border e-commerce platform Integration with over 15 established online marketplaces such as Amazon, ebay SMB customers across the globe 70+ employees</li>
+                          <li>Renesas Electronics, headquartered in Japan is a multi-billion dollar semiconductor solution provider. The  company has over 30,000 employees</li>
                       </ul>
                       <h3 class="heading">Problem</h3>
-                      <ul>
-                          <li>Build the AI engines, data pipelines and infrastructure for the business intelligence subsystem</li>
-                      </ul>
+                      
+                          <p>Renesas needed an IoT device management solution for  the Synergy series of MCU’s. Being a hardware and  embedded software company, the organization lacked  expertise in modern cloud technologies and integration  with embedded software</p>
+                      
                       <h3 class="heading">Solution</h3>
-                      <p>Hamon designed the Al engine powering Eunimart's  path breaking technology platform. Obtained and analyzed  over two years of historical sales data of customers to create  models for predicting sales, suggesting price etc. Developed  retrainable subsystems with automated data pipelines that  currently power the platform</p>
+                      <p>Developed a library that could be linked with any  embedded application which would provided  device management functionality Provided cloud backend to communicate and  manage devices remotely</p>
                       <h3 class="heading">Result</h3>
-                      <p>Eunimart was able to release MVP, acquire external investors  and begin customer acquisition. First version of the general  availability product released and currently working on Phase 2</p>
+                      <p>Initial proof of concept demonstrated OTA and  monitoring capabilities successfully</p>
                       <h3 class="heading">Technologies</h3>
-                      <p>Natural Language Toolkit (Python NLTK), Tensorflow,  Scikit-Learn, AWS Sagemaker, Scrapy. Selenium</p>
+                      <p>Embedded development software, C, Amazon AWS, REST API’s, Flask</p>
                   </div>    
             </div>
             <div class="col py-5 px-5 side-nav">
@@ -79,7 +79,7 @@
                     <ul class="px-5 pb-5">
                         <li><a href="./case_study_qq.html">QuackQuack</a></li>
                         <hr>
-                        <li><a href="#" class="current">Eunimart</a></li>
+                        <li><a href="./case_study_euni.html">Eunimart</a></li>
                         <hr>
                         <li><a href="./case_study_vyoma.html">Vyoma Media</a></li>
                         <hr>
@@ -91,7 +91,7 @@
                         <hr>
                         <li><a href="./case_study_id.html">Idea Device (acquired by Nutanix)</a></li>
                         <hr>
-                        <li><a href="./case_study_renesas.html">Renesas Electronics</a></li>
+                        <li><a href="#" class="current">Renesas Electronics</a></li>
                     </ul>
 
                 </div>
