--- a/case_study_vyoma.html
+++ b/case_study_vyoma.html
@@ -53,24 +53,26 @@
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
             <div class="col-8 py-5 work-pointer description text-justify">
-                  <h1 class="case-study-title">Case Study: <span class="company-title">Eunimart</span></h1>
+                  <h1 class="case-study-title">Case Study: <span class="company-title">Vyoma Media</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
                       <img class="pb-5" src="./img/case_study/qq.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
-                          <li>Breakthrough AI-powered cross border e-commerce platform Integration with over 15 established online marketplaces such as Amazon, ebay SMB customers across the globe 70+ employees</li>
+                          <li>Company Proﬁle The leader in Indian digital signage space </li>
+                          <li>Four million eyeballs daily across Indian Railway stations, bus stations etc. </li>
+                          <li>504 clients, 2512 campaigns, 17 states, 400 locations, 2121 displays 100+ Employees</li>
                       </ul>
                       <h3 class="heading">Problem</h3>
-                      <ul>
-                          <li>Build the AI engines, data pipelines and infrastructure for the business intelligence subsystem</li>
-                      </ul>
+                      
+                          <p>Vyoma was looking to expand from 2000 to 5000 screens nationally. However their deployment time was more than 1 month. Updates required manual workforce for deployment and monitoring and testing had to be done onsite leading to high defect rate. Often these displays were in areas with poor intener connectivity</p>
+                      
                       <h3 class="heading">Solution</h3>
-                      <p>Hamon designed the Al engine powering Eunimart's  path breaking technology platform. Obtained and analyzed  over two years of historical sales data of customers to create  models for predicting sales, suggesting price etc. Developed  retrainable subsystems with automated data pipelines that  currently power the platform</p>
+                      <p>We built a device management system to manage and monitor the displays remotely on a centralized custom made dashboard. The ad-engine was rearchitected to reduce defects and increase reliability. Large ad videos required efficient sync and maintenance and at places with poor internet connectivity, Offline fallback was provided</p>
                       <h3 class="heading">Result</h3>
-                      <p>Eunimart was able to release MVP, acquire external investors  and begin customer acquisition. First version of the general  availability product released and currently working on Phase 2</p>
+                      <p>60% manual labour reduction for deployment and monitoring Deployment times were reduced from over a month to a week per city. Over 80% of defects were caught in the lab before deployment.</p>
                       <h3 class="heading">Technologies</h3>
-                      <p>Natural Language Toolkit (Python NLTK), Tensorflow,  Scikit-Learn, AWS Sagemaker, Scrapy. Selenium</p>
+                      <p>Python, Shell, MQTT, AWS, Linux, various A/V tools</p>
                   </div>    
             </div>
             <div class="col py-5 px-5 side-nav">
@@ -79,9 +81,9 @@
                     <ul class="px-5 pb-5">
                         <li><a href="./case_study_qq.html">QuackQuack</a></li>
                         <hr>
-                        <li><a href="#" class="current">Eunimart</a></li>
+                        <li><a href="./case_study_euni.html">Eunimart</a></li>
                         <hr>
-                        <li><a href="./case_study_vyoma.html">Vyoma Media</a></li>
+                        <li><a href="#" class="current">Vyoma Media</a></li>
                         <hr>
                         <li><a href="./case_study_paisool.html">Paisool.com</a></li>
                         <hr>
