Add Carousel for work section

--- a/services.html
+++ b/services.html
@@ -80,66 +80,63 @@
                 </p>
             </div>
         </div>
+    </div>
+
         <!-- Content -->
-        <div class="row d-flex my-5 serviceTitle">
-            <div class="col">
-                <div class="row mx-5 my-auto">
-                    <div class="col">
-                        <!-- first row -->
-                        <div class="row ">
-                            <div class="col-md-6 col-md-12 d-flex justify-content-left">
-                                <img src="./img/service/iconAi.svg" alt="" class="mr-2">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <h1>AI/ML</h1>
-                                        <p class="text-justify">
-                                            Data analysis and pre-processing Standard machine learning and deep learning Automation and data pipelines Deploying ML solutions
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-md-12 d-flex justify-content-right">
-                                <img src="./img/service/cloud.svg" alt="" class=" mr-2">
-                                <div class="row">
-                                    <div class="col">
-                                        <h1>Cloud Computing</h1>
-                                        <p class="text-justify">
-                                            AWS services (Sagemaker, Lambda, Cognito, Glue, etc.) Cloud migration and management
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+        <div class="container py-5">
+            <!-- first row -->
+            <div class="row d-flex justify-content-center serviceTitle">
+                <div class="col-md-6 d-flex justify-content-left">
+                    <img src="./img/service/iconAi.svg" alt="" class="mr-2">
+                    <div class="row pb-3">
+                        <div class="col-md-12">
+                            <h1>AI/ML</h1>
+                            <p>
+                                Data analysis and pre-processing<br>Standard machine learning and deep learning<br>Automation and data pipelines<br>Deploying ML solutions
+                            </p>
                         </div>
-                        <!-- Second row -->
-                        <div class="row">
-                            <div class="col-md-6 col-md-12 d-flex justify-content-left">
-                                <img src="./img/service/automation.svg" alt="" class=" mr-2">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <h1>Automation</h1>
-                                        <p class="text-justify">
-                                            Devops Test automation and reporting IoT device management Custom deployment solutions
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-md-12 d-flex justify-content-right">
-                                <img src="./img/service/advisory.svg" alt="" class=" mr-2">
-                                <div class="row">
-                                    <div class="col">
-                                        <h1>Advisory</h1>
-                                        <p class="text-justify">
-                                            Software development best practices Scalable software architecture CTO as a service
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex justify-content-right">
+                    <img src="./img/service/cloud.svg" alt="" class=" mr-2">
+                    <div class="row">
+                        <div class="col">
+                            <h1>Cloud Computing</h1>
+                            <p>
+                                AWS services (Sagemaker, Lambda, Cognito, Glue, etc.)<br>Cloud migration and management
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Second row -->
+            <div class="row d-flex justify-content-center serviceTitle">
+                <div class="col-md-6 d-flex justify-content-left">
+                    <img src="./img/service/automation.svg" alt="" class=" mr-2">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Automation</h1>
+                            <p>
+                                Devops<br>Test automation and reporting<br>IoT device management<br>Custom deployment solutions
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex justify-content-right">
+                    <img src="./img/service/advisory.svg" alt="" class=" mr-2">
+                    <div class="row">
+                        <div class="col">
+                            <h1>Advisory</h1>
+                            <p>
+                                Software development best practices<br>Scalable software architecture<br>CTO as a service
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        
+    
 
     <!-- Second Section -->
     <div class="container-fluid section-bg">
